--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=0.0.0.0
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=qanda
-DB_USERNAME=root
-DB_PASSWORD=password
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
